# rails_api_search

./: README.md  pyproject.toml
src/rails_api_search/: server.py
tests/: test_server.py
