[project]
name = "rails_api_search"
version = "0.1.0"
description = "MCP server for searching Rails API documentation"
requires-python = ">=3.12"
dependencies = [
    "httpx",
    "beautifulsoup4",
    "python-dotenv",
    "mcp>=0.1.0",
]

[project.optional-dependencies]
dev = ["pytest"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
]

[project.scripts]
rails-api-search = "rails_api_search:main"

[tool.pytest.ini_options]
asyncio_mode = "strict"
addopts = "-ra -q"
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_default_fixture_loop_scope = "function"
